[package]
name = "ssh-honeypot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.102"
chrono = { version = "0.4.44", features = ["serde"] }
clap = { version = "4.6.0", features = ["derive"] }
pollster = "0.4.0"
russh = { version = "0.57.0"}
rustls = "0.23.37"
rustls-tokio-stream = "0.8.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
tokio = "1.51.0"
x509-parser = "0.18.1"
